<resources>

    <string name="app_name">Smart Tour App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="register">REGISTER</string>
    <string name="login_password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_username_hint">Username</string>


    <string name="link">https://smart-tourist-app.herokuapp.com/</string>
    <string name="local_host">http://192.168.1.206:3000/</string>

</resources>